versions/v2.8/modules/en/pages/cluster-admin/manage-clusters/access-clusters/access-clusters.adoc
= Access Clusters
:revdate: 2024-09-26
:page-revdate: {revdate}

This section is about what tools can be used to access clusters managed by Rancher.

For information on how to give users permission to access a cluster, see the section on xref:cluster-admin/manage-clusters/access-clusters/add-users-to-clusters.adoc[adding users to clusters.]

For more information on roles-based access control, see xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/manage-role-based-access-control-rbac.adoc[this section.]

For information on how to set up an authentication system, see xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc[this section.]

== Clusters in Rancher UI

There are several paths to view and manage clusters through the Rancher UI.

=== Clusters Page

You can access the *Clusters* page from the *☰* menu:

. Click *☰*.
. Select *Cluster Management*.

You can also access the *Clusters* page by clicking the *Manage* button above the clusters table on the Rancher UI *Home* page.

On the *Clusters* page, select *⁝* at the end of each row to view a submenu with the following options:

* xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc[Kubectl Shell]
* Download KubeConfig
* Copy KubeConfig to Clipboard
* Edit Config
* View YAML
* Download YAML

=== Cluster Dashboard

On the *Clusters* page, select the *Explore* button at the end of each row to view that cluster's *Cluster Dashboard*. You can also view the dashboard by clicking the name of a cluster in the table, then clicking the *Explore* buttton on the *Cluster* page.

The *Cluster Dashboard* is also accessible from the Rancher UI *Home* page, by clicking on the name of a cluster.

You can also access the *Cluster Dashboard* from the *☰* in the top navigation bar:

. Click *☰*.
. Select the name of a cluster from the *Explore Cluster* menu option.

The *Cluster Dashboard* lists information about a specific cluster, such as number of nodes, memory usage, events, and resources.

== kubectl

You can use the Kubernetes command-line tool, https://kubernetes.io/docs/reference/kubectl/overview/[kubectl], to manage   your clusters. You have two options for using kubectl:

* *Rancher kubectl shell:* Interact with your clusters by launching a kubectl shell available in the Rancher UI. This option requires no configuration actions on your part. For more information, see xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc[Accessing Clusters with kubectl Shell].
* *Terminal remote connection:* You can also interact with your clusters by installing https://kubernetes.io/docs/tasks/tools/install-kubectl/[kubectl] on your local desktop and then copying the cluster's kubeconfig file to your local `~/.kube/config` directory. For more information, see xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc[Accessing Clusters with kubectl and a kubeconfig File].

== Rancher CLI

You can control your clusters by downloading Rancher's own command-line interface, xref:rancher-admin/cli/rancher-cli.adoc[Rancher CLI]. This CLI tool can interact directly with different clusters and projects or pass them `kubectl` commands.

== Rancher API

Finally, you can interact with your clusters over the Rancher API. Before you use the API, you must obtain an xref:rancher-admin/users/settings/api-keys.adoc[API key]. To view the different resource fields and actions for an API object, open the API UI, which can be accessed by clicking on *View in API* for any Rancher UI object.
