versions/v2.9/modules/en/pages/cluster-admin/manage-clusters/access-clusters/access-clusters.adoc
= Access Clusters
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/manage-clusters/access-clusters/index.adoc 
:product-path: cluster-admin/manage-clusters/access-clusters/access-clusters.adoc
ifeval::["{build-type}" != "community"]
:xref-rancher-cli: xref:rancher-admin/cli/rancher-cli.adoc
:xref-user-api-keys: rancher-admin/users/settings/api-keys.adoc
:xref-access-cluster-kubectl: xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
:xref-authn-authz: xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc
:xref-manage-rbac: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/manage-role-based-access-control-rbac.adoc
:xref-add-users-to-clusters: xref:cluster-admin/manage-clusters/access-clusters/add-users-to-clusters.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-rancher-cli: xref:reference-guides/cli-with-rancher/rancher-cli.adoc
:xref-user-api-keys: xref:reference-guides/user-settings/api-keys.adoc
:xref-access-cluster-kubectl: xref:how-to-guides/new-user-guides/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
:xref-authn-authz: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/authentication-config/index.adoc
:xref-manage-rbac: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/index.adoc
:xref-add-users-to-clusters: xref:how-to-guides/new-user-guides/manage-clusters/access-clusters/add-users-to-clusters.adoc
endif::[]

This section is about what tools can be used to access clusters managed by Rancher.

For information on how to give users permission to access a cluster, see the section on {xref-add-users-to-clusters}[adding users to clusters.]

For more information on roles-based access control, see {xref-manage-rbac}[this section.]

For information on how to set up an authentication system, see {xref-authn-authz}[this section.]

== Clusters in Rancher UI

There are several paths to view and manage clusters through the Rancher UI.

=== Clusters Page

You can access the *Clusters* page from the *☰* menu:

. Click *☰*.
. Select *Cluster Management*.

You can also access the *Clusters* page by clicking the *Manage* button above the clusters table on the Rancher UI *Home* page.

On the *Clusters* page, select *⁝* at the end of each row to view a submenu with the following options:

* {xref-access-cluster-kubectl}[Kubectl Shell]
* Download KubeConfig
* Copy KubeConfig to Clipboard
* Edit Config
* View YAML
* Download YAML

=== Cluster Dashboard

On the *Clusters* page, select the *Explore* button at the end of each row to view that cluster's *Cluster Dashboard*. You can also view the dashboard by clicking the name of a cluster in the table, then clicking the *Explore* buttton on the *Cluster* page.

The *Cluster Dashboard* is also accessible from the Rancher UI *Home* page, by clicking on the name of a cluster.

You can also access the *Cluster Dashboard* from the *☰* in the top navigation bar:

. Click *☰*.
. Select the name of a cluster from the *Explore Cluster* menu option.

The *Cluster Dashboard* lists information about a specific cluster, such as number of nodes, memory usage, events, and resources.

== kubectl

You can use the Kubernetes command-line tool, https://kubernetes.io/docs/reference/kubectl/overview/[kubectl], to manage   your clusters. You have two options for using kubectl:

* *Rancher kubectl shell:* Interact with your clusters by launching a kubectl shell available in the Rancher UI. This option requires no configuration actions on your part. For more information, see {xref-access-cluster-kubectl}[Accessing Clusters with kubectl Shell].
* *Terminal remote connection:* You can also interact with your clusters by installing https://kubernetes.io/docs/tasks/tools/install-kubectl/[kubectl] on your local desktop and then copying the cluster's kubeconfig file to your local `~/.kube/config` directory. For more information, see {xref-access-cluster-kubectl}[Accessing Clusters with kubectl and a kubeconfig File].

== Rancher CLI

You can control your clusters by downloading Rancher's own command-line interface, {xref-rancher-cli}[Rancher CLI]. This CLI tool can interact directly with different clusters and projects or pass them `kubectl` commands.

== Rancher API

Finally, you can interact with your clusters over the Rancher API. Before you use the API, you must obtain an {xref-user-api-keys}[API key]. To view the different resource fields and actions for an API object, open the API UI, which can be accessed by clicking on *View in API* for any Rancher UI object.
